--- a/static/index.html
+++ b/static/index.html
@@ -124,7 +124,38 @@
                         </div>
                     </div>
                 </div>
+                <div class="card mt-3">
+                    <h5 class="card-header">Updating</h5>
+                    <div class="card-body">
+                        <div
+                            class="row d-flex justify-content-center text-center"
+                        >
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <div class="input-group-text">
+                                        Table Name
+                                    </div>
+                                    <input type="text" class="form-control" id="updatingTableName"/>
+                                    <div class="input-group-text">Condition</div>
+                                    <input type="text" class="form-control" id="updatingCondition"/>
+                                    <div class="input-group-text">
+                                        Data
+                                    </div>
+                                    <input type="text" class="form-control" id="updatingData"/>
+                                    <button
+                                        type="button"
+                                        class="btn btn-primary"
+                                        onclick="updating()"
+                                    >
+                                        Update
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- Result Display -->
                 <div class="card mt-3">
                     <h5 class="card-header">Result Display</h5>
                     <code
