--- a/static/index.html
+++ b/static/index.html
@@ -183,6 +183,34 @@
                     </div>
                 </div>
 
+                <!-- Insertion -->
+                <div class="card mt-3">
+                    <h5 class="card-header">Insertion</h5>
+                    <div class="card-body">
+                        <div
+                            class="row d-flex justify-content-center text-center"
+                        >
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <div class="input-group-text">
+                                        Table Name
+                                    </div>
+                                    <input type="text" class="form-control" id="insertionTableName"/>
+                                    <div class="input-group-text">Data</div>
+                                    <input type="text" class="form-control" id="insertionData"/>
+                                    <button
+                                        type="button"
+                                        class="btn btn-primary"
+                                        onclick="insertion()"
+                                    >
+                                        Insert
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Result Display -->
                 <div class="card mt-3">
                     <h5 class="card-header">Result Display</h5>
