--- a/static/index.html
+++ b/static/index.html
@@ -105,13 +105,25 @@
                                     <div class="input-group-text">
                                         Table Name
                                     </div>
-                                    <input type="text" class="form-control" id="filteringTableName"/>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="filteringTableName"
+                                    />
                                     <div class="input-group-text">Field(s)</div>
-                                    <input type="text" class="form-control" id="filteringFields"/>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="filteringFields"
+                                    />
                                     <div class="input-group-text">
                                         Condition
                                     </div>
-                                    <input type="text" class="form-control" id="filteringCondition"/>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="filteringCondition"
+                                    />
                                     <button
                                         type="button"
                                         class="btn btn-primary"
@@ -136,13 +148,25 @@
                                     <div class="input-group-text">
                                         Table Name
                                     </div>
-                                    <input type="text" class="form-control" id="updatingTableName"/>
-                                    <div class="input-group-text">Condition</div>
-                                    <input type="text" class="form-control" id="updatingCondition"/>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="updatingTableName"
+                                    />
                                     <div class="input-group-text">
-                                        Data
+                                        Condition
                                     </div>
-                                    <input type="text" class="form-control" id="updatingData"/>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="updatingCondition"
+                                    />
+                                    <div class="input-group-text">Data</div>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="updatingData"
+                                    />
                                     <button
                                         type="button"
                                         class="btn btn-primary"
@@ -167,9 +191,19 @@
                                     <div class="input-group-text">
                                         Table Name
                                     </div>
-                                    <input type="text" class="form-control" id="deletionTableName"/>
-                                    <div class="input-group-text">Condition</div>
-                                    <input type="text" class="form-control" id="deletionCondition"/>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="deletionTableName"
+                                    />
+                                    <div class="input-group-text">
+                                        Condition
+                                    </div>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="deletionCondition"
+                                    />
                                     <button
                                         type="button"
                                         class="btn btn-primary"
@@ -195,9 +229,17 @@
                                     <div class="input-group-text">
                                         Table Name
                                     </div>
-                                    <input type="text" class="form-control" id="insertionTableName"/>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="insertionTableName"
+                                    />
                                     <div class="input-group-text">Data</div>
-                                    <input type="text" class="form-control" id="insertionData"/>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="insertionData"
+                                    />
                                     <button
                                         type="button"
                                         class="btn btn-primary"
@@ -210,9 +252,52 @@
                         </div>
                     </div>
                 </div>
+                <!-- Ordering -->
+                <div class="card mt-3">
+                    <h5 class="card-header">Sorting</h5>
+                    <div class="card-body">
+                        <div
+                            class="row d-flex justify-content-center text-center"
+                        >
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <div class="input-group-text">
+                                        Table Name
+                                    </div>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="sortingTableName"
+                                    />
+                                    <div class="input-group-text">Field</div>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="sortingField"
+                                    />
+                                    <div class="input-group-text">
+                                        <input
+                                            type="checkbox"
+                                            aria-label="Checkbox for following text input"
+                                            id="sortingASC"
+                                        />
+                                    </div>
+                                    <div class="input-group-text">ASC</div>
+                                    <button
+                                        type="button"
+                                        class="btn btn-primary"
+                                        onclick="sorting()"
+                                    >
+                                        Sort
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <!-- Result Display -->
-                <div class="card mt-3">
+                <div class="card mt-3 mb-5">
                     <h5 class="card-header">Result Display</h5>
                     <code
                         class="card-body d-flex justify-content-left text-left overflow-auto"
