--- a/static/index.html
+++ b/static/index.html
@@ -295,6 +295,49 @@
                         </div>
                     </div>
                 </div>
+                <!-- Join -->
+                <div class="card mt-3">
+                    <h5 class="card-header">Join</h5>
+                    <div class="card-body">
+                        <div
+                            class="row d-flex justify-content-center text-center"
+                        >
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <div class="input-group-text">
+                                        Left Table
+                                    </div>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="joinLeftTable"
+                                    />
+                                    <div class="input-group-text">
+                                        Right Table
+                                    </div>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="joinRightTable"
+                                    />
+                                    <div class="input-group-text">Condition</div>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="joinCondition"
+                                    />
+                                    <button
+                                        type="button"
+                                        class="btn btn-primary"
+                                        onclick="join()"
+                                    >
+                                        Join
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <!-- Result Display -->
                 <div class="card mt-3 mb-5">
