frontend upload dataset

--- a/static/index.html
+++ b/static/index.html
@@ -58,6 +58,22 @@
                         </div>
                     </div>
                 </div>
+                <!-- Loading -->
+                <div class="card mt-3">
+                    <h5 class="card-header">Upload Dataset</h5>
+                    <div class="card-body">
+                        <div
+                            class="row d-flex justify-content-center text-center"
+                        >
+                            <div class="col-12">
+                                <div class="input-group mb-3">
+                                    <input type="file" class="form-control" id="datasetToLoad" accept=".csv">
+                                    <button class="btn btn-primary" for="datasetToLoad" onclick="load()">Upload</button>
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- Projection -->
                 <div class="card mt-3">
                     <h5 class="card-header">Projection</h5>
